--- a/project-code.ipynb
+++ b/project-code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 30,
    "id": "74515bd2",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 31,
    "id": "e491d264",
    "metadata": {},
    "outputs": [],
@@ -71,10 +71,10 @@
     "\n",
     "# Defaults for the model to experiment: \n",
     "\n",
-    "ATTENDANCE_PROBABILITY = 0.60\n",
-    "CLASS_DURATION_MINUTES = [45, 60, 75, 90]\n",
-    "SELF_STUDY_THRESHOLD = 0.04\n",
-    "TEACHER_FEEDBACK_PROBABILITY = 0.45"
+    "ATTENDANCE_PROBABILITY = 0.60 # probability that a student attends a class\n",
+    "CLASS_DURATION_MINUTES = [45, 60, 75, 90] # minutes attended in a class\n",
+    "SELF_STUDY_THRESHOLD = 0.04 # threshold val for home-study\n",
+    "TEACHER_FEEDBACK_PROBABILITY = 0.45 # probability that a student asks for teacher feedback"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 32,
    "id": "39f52f60",
    "metadata": {},
    "outputs": [],
@@ -138,12 +138,18 @@
    "source": [
     "Teacher Class\n",
     "\n",
-    "+ Represents instructor who provides teaching and feedback to students."
+    "+ Represents instructor who provides teaching and feedback to students.\n",
+    "\n",
+    "teaching_quality - the baseline instruction.\n",
+    "\n",
+    "feedback_level (intensity) - scales the extra feedback boost.\n",
+    "\n",
+    "classroom_capacity - limits how many students receive feedback per day."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 33,
    "id": "ef38c943",
    "metadata": {},
    "outputs": [],
@@ -193,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "id": "3d7cf4cb",
    "metadata": {},
    "outputs": [],
@@ -235,7 +241,7 @@
     "        \"\"\"\n",
     "        \n",
     "        \"\"\"\n",
-    "        if self.model.random.random() < self.attendance_probability:\n",
+    "        if self.model.random.random() > self.attendance_probability:\n",
     "            # If a student skips a class, we set up a threshold value that they are self-studying at home/any place and give them a relatively small score.\n",
     "            self.skill = bound(self.skill + 0.025 * self.learning_rate) # this 0.025 can be adjusted later, either as a constant \n",
     "            return False\n",
@@ -354,6 +360,11 @@
    "source": [
     "### Short explanation \n",
     "\n",
+    "+ skill ∈ [10,50] initially (bounded to [0,100] on updates).\n",
+    "\n",
+    "+ learning_rate ∈ {0.5,1.0,1.5} typically.\n",
+    "\n",
+    "+ learning_style ∈ {\"social\",\"solo\"} influences place choice.\n",
     "\n",
     "####    **attend_class()**\n",
     "\n",
