--- a/project-code.ipynb
+++ b/project-code.ipynb
@@ -448,9 +448,7 @@
    "id": "bb4301ba",
    "metadata": {},
    "source": [
-    "#### YET TO DO; \n",
-    "\n",
-    "#### Step 3 (main stage): Build the Mesa Model (Mesa 3 activation, no need for RandomActivation) - why no random because it was replaced with AgentSets you can use shuffle probably. \n",
+    "### 4. **Model Architecture** \n",
     "\n",
     "+ Environment: create a grid campus (MultiGrid) with your public study spaces (capacity + resource quality) and places teachers and students on it.\n",
     "+ Network: builds a social network over students (e.g., ring/ER/small-world) and assigns tie strengths (used in peer learning).\n",
@@ -465,6 +463,264 @@
     "+ Measures: a DataCollector records weekly mean/median skill, total attendance, teacher interactions, and per-agent skill.\n",
     "\n",
     "+ Experiments-ready: parameters like capacities, feedback_level, teaching_quality, network type, and social_learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e99fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EducationModel(Model):\n",
+    "    def __init__(self, width=20, height=20, n_students=50, n_teachers=1, n_public_places=6, social_learning=True, network_type=\"small-world\", \n",
+    "                 teaching_quality=0.7, feedback_level=1.5, classroom_capacity=25, place_capacity_multiplier=1.0, seed=None):\n",
+    "        super().__init__(seed=seed)\n",
+    "\n",
+    "        # model parameters\n",
+    "        self.n_students = n_students\n",
+    "        self.social_learning = social_learning\n",
+    "        self.network_type = network_type\n",
+    "        self.current_step = 0\n",
+    "\n",
+    "        # grid campus\n",
+    "        self.grid = MultiGrid(width, height, torus=True)\n",
+    "\n",
+    "        # agent collections\n",
+    "        self.teachers = []\n",
+    "        self.students = []\n",
+    "        self.study_spaces = []\n",
+    "\n",
+    "        # daily tracking variable\n",
+    "        self.class_lottery = []     # students eligible for teacher feedback on that day\n",
+    "\n",
+    "        self.social_network = None  # NetworkX graph\n",
+    "        self.tie_strengths = {}     # (student_1, student_2) -> strength [0.3-1.0]\n",
+    "\n",
+    "        # --- Create all agents ---\n",
+    "        self.create_public_space(n_public_places, place_capacity_multiplier)\n",
+    "        self.create_teachers(n_teachers, teaching_quality, feedback_level, classroom_capacity)\n",
+    "        self.create_students(n_students)\n",
+    "        self.build_social_network()\n",
+    "\n",
+    "        # --- Setup data collection ---\n",
+    "        self.datacollectr = DataCollector(\n",
+    "            model_reporters={\n",
+    "                \"Mean_Skill\": lambda m: np.mean([s.skill for s in m.students]),\n",
+    "                \"Median_Skill\": lambda m: np.median([s.skill for s in m.students]),\n",
+    "                \"Total_Attendance\": lambda m: sum([s.attendance for s in m.students]),\n",
+    "                \"Total_Teacher_Interactions\": lambda m: sum([s.teacher_interactions for s in m.students]),\n",
+    "                \"Per-Agent_Skill\": lambda m: np.std([s.skill for s in m.students]),\n",
+    "            },\n",
+    "            agent_reporters = {\n",
+    "                \"Skill\" : \"skill\",\n",
+    "                \"Attendance\" : \"attendance\",\n",
+    "                \"Teacher_Interactions\": \"teacher_interactions\",\n",
+    "                \"Learning_Style\": \"learning_style\"\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    # Agent Creation Methods\n",
+    "    def create_public_space(self, n, capacity_mult):\n",
+    "        \"\"\" Create public study spaces \"\"\"\n",
+    "\n",
+    "        # base config values\n",
+    "        base_quality = 0.75\n",
+    "        base_capacity = 8\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            # add variation so public spaces differ in quality/capacity\n",
+    "            quality = base_quality + self.random.uniform(-0.2, 0.2)\n",
+    "            capacity = int(base_capacity * capacity_mult)\n",
+    "        \n",
+    "        place = PublicPlaces(\n",
+    "            self,\n",
+    "            resource_quality = bound(quality, 0.3, 1.0),     # bounded quality\n",
+    "            capacity = max(3, capacity)     # min capacity is 3\n",
+    "        )\n",
+    "        self.study_spaces.append(place)\n",
+    "\n",
+    "        # place randomly on grid\n",
+    "        x = self.random.randrange(self.grid.width)\n",
+    "        y = self.random.randrange(self.grid.height)\n",
+    "        self.grid\n",
+    "        \n",
+    "    def create_teachers(self, n, quality, feedback, capacity):\n",
+    "        \"\"\" Create teacher agents and place them on the grid. \"\"\"\n",
+    "        for i in range(n):\n",
+    "            teacher = Teacher(self, teaching_quality=quality, feedback_level=feedback, classroom_capacity=capacity)\n",
+    "            self.teachers.append(teacher)\n",
+    "\n",
+    "            # place teacher at center of grid - fixed location\n",
+    "            x = self.grid.width // 2\n",
+    "            y =  self.grid.height // 2\n",
+    "            self.grid.place_agent(teacher, (x,y))\n",
+    "\n",
+    "    def create_students(self, n):\n",
+    "        \"\"\" Create student agents with diverse characteristics \"\"\"\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            lr = self.random.unifrom(0.5, 1.5)  # random learning rate\n",
+    "\n",
+    "            # assign learning style\n",
+    "            style = \"social\" if self.random.random() < 0.6 else \"solo\"  # 60% social, 40% solo\n",
+    "\n",
+    "            # assign resource access\n",
+    "            access = self.random.random() < 0.8     # 80% have access\n",
+    "\n",
+    "            student = Student(\n",
+    "                self,\n",
+    "                learning_rate = lr,\n",
+    "                learning_style = style,\n",
+    "                access_to_resources = access\n",
+    "            )\n",
+    "            self.students.append(student)\n",
+    "\n",
+    "            # place randomly on grid\n",
+    "            x = self.random.randrange(self.grid.width)\n",
+    "            y = self.random.randrange(self.grid.heigth)\n",
+    "            self.grid.place_agent(student, (x,y))\n",
+    "\n",
+    "    def build_social_network(self):\n",
+    "        \"\"\" Build social network among students with varying structures \"\"\"\n",
+    "\n",
+    "        n = len(self.students)\n",
+    "\n",
+    "        # generate network based on type\n",
+    "        if self.network_type == \"ring\":\n",
+    "            G = nx.watts_strogatz_graph(n, 4, 0.0, seed=self.random.randint(0, 10000))\n",
+    "        elif self.network_type == \"small_world\":\n",
+    "            G = nx.watts_strogatz_graph(n, 6, 0.3, seed=self.random.randint(0, 10000))\n",
+    "        elif self.network_type == \"random\":\n",
+    "            G = nx.erdos_renyi_graph(n, 0.15, seed=self.random.randint(0, 10000))\n",
+    "        else:  # complete\n",
+    "            G = nx.complete_graph(n)\n",
+    "        \n",
+    "        self.social_network = G\n",
+    "\n",
+    "        # assign tie strengths to all edges\n",
+    "        for (i, j) in G.edges():\n",
+    "            strength = self.random.uniform(0.3, 1.0)\n",
+    "            self.tie_strengths[(i, j)] = strength\n",
+    "            self.tie_strengths[(j,i)] = strength    # symmetric relationship\n",
+    "\n",
+    "\n",
+    "    # Network Query Methods\n",
+    "    def get_tie_strength(self, student_id1, student_id2):\n",
+    "        \"\"\" Get tie strength between two students from social network. \"\"\"\n",
+    "        return self.tie_strengths.get((student_id1, student_id2), 0.0)\n",
+    "    \n",
+    "    def get_agent_skill(self, student_id):\n",
+    "        \"\"\" Get current skill level of student by ID \"\"\"\n",
+    "        for s in self.students:\n",
+    "            if s.unique_id == student_id:\n",
+    "                return s.skill\n",
+    "            return 0.0\n",
+    "\n",
+    "    # Step Method\n",
+    "    def step(self):\n",
+    "        \"\"\" Execute one time step (one day) of the simulation. \"\"\"\n",
+    "\n",
+    "        # reset rooms & lottery\n",
+    "        self.class_lottery = []\n",
+    "        for place in self.study_spaces:\n",
+    "            place.reset()\n",
+    "\n",
+    "        # activate all the agents once in random order\n",
+    "        all_agents = self.teachers + self.students + self.study_spaces\n",
+    "        self.random.shuffle(all_agents)\n",
+    "        for agent in all_agents:\n",
+    "            agent.step()\n",
+    "\n",
+    "        # resolve teacher feedback\n",
+    "        self.resolve_teacher_feedback()\n",
+    "\n",
+    "        # collect data for this step\n",
+    "        self.datacollector.collect(self)\n",
+    "        self.current_step += 1\n",
+    "\n",
+    "    def resolve_teacher_feedback(self):\n",
+    "        \"\"\" Distribute teacher feedback to students in lottery. \"\"\"\n",
+    "\n",
+    "        if not self.class_lottery or not self.teachers:\n",
+    "            return\n",
+    "        \n",
+    "        teacher = self.teachers[0]\n",
+    "\n",
+    "        max_feedback = min(5, len(self.class_lottery))  # teacher can only help 5 students per day (realistic constraint)\n",
+    "\n",
+    "        # randomly select from lottery pool\n",
+    "        selected = self.random.sample(self.class_lottery, max_feedback)\n",
+    "\n",
+    "\n",
+    "        # apply feedback to selected students\n",
+    "        for student_id in selected:\n",
+    "            for student in self.students:\n",
+    "                if student.unique_id == student_id:\n",
+    "                    student.gain_teacher_feedback(teacher)\n",
+    "                    break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e2deb95",
+   "metadata": {},
+   "source": [
+    "### Short explanation \n",
+    "\n",
+    "\n",
+    "####    **create_public_space(n, capacity_mult)**\n",
+    "Creates a number of public study spaces where students can study.  \n",
+    "Each space has:\n",
+    "- A resource quality (between 0.3 and 1.0).  \n",
+    "- A capacity that scales with `capacity_mult`.  \n",
+    "Spaces are distributed randomly across the grid.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **create_teachers(n, quality, feedback, capacity)**\n",
+    "Generates teacher agents placed at the **center** of the grid.  \n",
+    "Each teacher has:\n",
+    "- A defined **teaching quality** (how effective they are).  \n",
+    "- A **feedback level** and **classroom capacity** limiting how many students they can assist daily.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **create_students(n)**\n",
+    "Creates a diverse population of students with varying traits:\n",
+    "- **Learning rate:** individual skill growth rate.  \n",
+    "- **Learning style:** 60% social, 40% solo learners.  \n",
+    "- **Resource access:** 80% have access to study resources.  \n",
+    "Each student is placed randomly on the grid.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **build_social_network()**\n",
+    "Constructs a **social network** among students using different topologies:\n",
+    "- **Ring**, **Small-World**, **Random**, or **Complete** graphs via NetworkX.  \n",
+    "- Each edge has an assigned **tie strength** (0.3–1.0) representing peer influence.  \n",
+    "This structure is used for social learning interactions.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **get_tie_strength(student_id1, student_id2)**\n",
+    "Returns the tie strength (peer connection weight) between two students.  \n",
+    "Used to determine how much one student can influence another during learning.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **get_agent_skill(student_id)**\n",
+    "Fetches the current skill level of a student by their unique ID.  \n",
+    "Supports data collection and peer-learning calculations.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **resolve_teacher_feedback()**\n",
+    "Simulates teacher feedback allocation:\n",
+    "- Teachers can only assist a limited number of students (e.g., 5 per day).  \n",
+    "- Randomly selects students from the **class lottery** and applies skill boosts through feedback.\n",
+    "\n"
    ]
   },
   {
