--- a/version-2.ipynb
+++ b/version-2.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## **Agent-Based Modeling and Simulation Project**\n",
     "\n",
-    "+   Group Members: Romey and Aswin Subramanian Maheswaran"
+    "+   Group Members: Romey Bajada and Aswin Subramanian Maheswaran"
    ]
   },
   {
