--- a/Code.ipynb
+++ b/Code.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "d1460910",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
     "def crowding_penalty(place):\n",
     "    \"\"\"\n",
     "    Add a penalty factor for crowding in public places\n",
-    "    Chances of distraction increase with more people. (Is there any theory behind this?)\n",
+    "    Chances of distraction increase with more people.\n",
     "    Returns 1.0 when empty, drops after 80% occupancy.\n",
     "    \"\"\"\n",
     "    rho = len(place.current_learners) / max(1, place.capacity)  # occupancy ratio\n",
